# Open--Telegram-Bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  log  pyproject.toml  requirements.txt  stress_test_logs.txt
config/: bot_config.yaml  llm_config.yaml  system_prompt.txt
config/prompts/: creative.j2  default.j2
config/prompts/core/: secretary.j2
config/prompts/mood/: cynical.j2  enthusiastic.j2  professional.j2
config/prompts/style/: concise.j2  tech.j2  verbose.j2
config/prompts/thought/: analytical.j2  creative.j2  empathic.j2
scripts/linux/: docker_run.sh  run.sh  setup.sh
scripts/windows/: docker_run.bat  run.bat  setup.bat
src/: audio.py  bot.py  config.py  database.py  handlers.py  llm.py  middleware.py  prompts.py
tests/: manual_test_flow.py  test_config_flow.py
