[project]
name = "portfolio-bot"
version = "0.1.0"
description = "Telegram Portfolio Bot"
authors = [
    {name = "Jules",email = "jules@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "aiogram (>=3.24.0,<4.0.0)",
    "pymongo (>=4.16.0,<5.0.0)",
    "openai (>=2.14.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "edge-tts (>=7.2.7,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
